<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/tvCheckStatus"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/circle_initials"
        android:contentDescription="@string/aggiungi"
        android:padding="8dp"
        android:src="@drawable/ic_add_white" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCheckNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_primary" />

        <TextView
            android:id="@+id/tvCheckConteggio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#888888" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivChecklistYuka"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/apri_link_prodotto"
        android:padding="8dp"
        android:src="@drawable/ic_yuka_logo"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/ivChecklistNutrition"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/informazioni_prodotto"
        android:padding="8dp"
        android:src="@drawable/ic_nutrition"
        android:visibility="gone" />

</LinearLayout>
